letterpaper now working

--- a/test/1/test.tex
+++ b/test/1/test.tex
@@ -1,6 +1,6 @@
 \documentclass{article}
 % This test checks that the real simple basic stuff works.
-% Namely newthought, maketitle, sectioning, fonts. 
+% Namely newthought, maketitle, sectioning, fonts, letterpaper. 
 % They should also work under tex4ebook.
 
 % TODO: letter paper sizes and lengths etc.
