--- a/tuftex-handout.sty
+++ b/tuftex-handout.sty
@@ -8,3 +8,4 @@
 \RequirePackage{tuftex-maketitle}
 \RequirePackage{tuftex-sectioning}
 \RequirePackage{tuftex-fonts}
+\RequirePackage{tuftex-letterpaper}
