--- a/tuftex-handout.sty
+++ b/tuftex-handout.sty
@@ -9,3 +9,4 @@
 \RequirePackage{tuftex-sectioning}
 \RequirePackage{tuftex-fonts}
 \RequirePackage{tuftex-letterpaper}
+\RequirePackage{tuftex-fullwidth}
