test/basic/simple and test/basic/appearance

--- a/tuftex-maketitle.sty
+++ b/tuftex-maketitle.sty
@@ -43,7 +43,7 @@
 \Large\itshape\@author\par
 \Large\itshape\@date\par
 \endgroup
-\thispagestyle{plain}% suppress the running head
+\thispagestyle{empty}% suppress the running head
 \@tuftex@TufteBreak% add some space before the text begins
 \@afterindentfalse\@afterheading% suppress indentation of the next paragraph
 }
