--- a/test/basic/appearance/test-theirs.tex
+++ b/test/basic/appearance/test-theirs.tex
@@ -6,8 +6,8 @@
 
 % Seems to work 2023-06-20
 
-\title{Testing}
-\author{Dennis Evangelista}
+\title{/test/basic/appearance/test-theirs.tex}
+\author{D.~Evangelista}
 \date{\today}
 
 %\usepackage{tuftex-handout}
