--- a/tuftex-letterpaper.sty
+++ b/tuftex-letterpaper.sty
@@ -39,7 +39,8 @@
 \NewDocumentCommand{\@tuftex@MarginPar}{}{%
   \setlength{\RaggedRightParindent}{0.5pc}%
   \setlength{\JustifyingParindent}{0.5pc}%
-  \setlength{\parindent}{0.5pc}%
+  %\setlength{\parindent}{0.5pc}%
+  \setlength{\parindent}{0pt}%
   \setlength{\parskip}{0pt}%
 } %\@tuftex@MarginPar
 
