--- a/test/basic/simple/test.tex
+++ b/test/basic/simple/test.tex
@@ -5,8 +5,8 @@
 
 % Seems to work 2023-06-20
 
-\title{Testing}
-\author{Dennis Evangelista}
+\title{/test/basic/simple/test.tex}
+\author{D.~Evangelista}
 \date{\today}
 
 \usepackage{tuftex-handout}
