\thanks does not show up in epub version probably wontfix

--- a/test/sidenotes/simple/test.tex
+++ b/test/sidenotes/simple/test.tex
@@ -3,6 +3,8 @@
 % This test checks that tuftex-sidenotes implementation works ok
 % e.g. thanks, footnote, sidenote, marginnote. 
 
+% TODO: \thanks does not show up in epub - probably wontfix
+
 \title{/test/sidenotes/simple/test.tex}
 \author{D.~Evangelista\thanks{\texttt{thanks} should show up as a numbered sidenote.}}
 \date{\today}
