--- a/tuftex-handout.sty
+++ b/tuftex-handout.sty
@@ -11,10 +11,10 @@
 \RequirePackage{tuftex-fonts}       % tufte fonts and sizes
 \RequirePackage{tuftex-letterpaper} % letter paper sizes, lengths, etc
 \RequirePackage{tuftex-fullwidth}   % fullwidth environment
-
-% testing
 \RequirePackage{tuftex-sidenotes}   % thanks, footnote, sidenote, marginnote
 
+% testing
+\RequirePackage{tuftex-cite}        % cite - citations with bibtex
+
 % TODO
-% cite - citations with bibtex
 % float - floats like figure, table, figure*, table*, marginfigure
