--- a/tuftex-handout.sty
+++ b/tuftex-handout.sty
@@ -16,5 +16,8 @@
 % testing
 \RequirePackage{tuftex-cite}        % cite - citations with bibtex
 
+% DISABLED/BAD
+%\RequirePackage{tuftex-letterspacing} % breaks tex4ebook!
+
 % TODO
 % float - floats like figure, table, figure*, table*, marginfigure
