--- a/tuftex-floats.sty
+++ b/tuftex-floats.sty
@@ -1,36 +1,50 @@
-\ProvidesPackage{tufte2-floats}[2023-06-19 package tufte2-floats]
+\NeedsTeXFormat{LaTeX2e}
+\ProvidesPackage{tuftex-floats}[2023-06-20 package tuftex-floats]
 
-\RequirePackage{caption}
-\RequirePackage{sidenotes}
+\RequirePackage{tuftex-fullwidth} % for autoadjustwidth
+\RequirePackage{tuftex-sidenotes} % for marginnote
+\RequirePackage{caption} % for DeclareCaptionFormat, captionsetup
+
+
 
 % Tighten up space between displays (e.g., a figure or table) and make symmetric
 \setlength\abovedisplayskip{6pt plus 2pt minus 4pt}
 \setlength\belowdisplayskip{6pt plus 2pt minus 4pt}
 
-
-
-
-% figure
-\DeclareCaptionFormat{tufte2figure}{\marginnote{f-#1#2#3}}
+\DeclareCaptionFormat{figure}{\marginnote{#1#2#3}} % HERE NEED TO SET THIS
 \RenewDocumentEnvironment{figure}{O{\fps@figure}}
-	{\captionsetup{format=tufte2figure,
-		font=footnotesize,skip=0pt,justification=raggedright}
-	\@float{figure}[#1]f-pre}%
-	{f-post\end@float}%
+	{\@float{figure}[#1]
+	\captionsetup{format=figure,font=footnotesize,skip=0pt}
+	}
+	{\end@float}
 
-% figure*
-\DeclareCaptionFormat{tufte2widefigure}{\marginnote{fstar-#1#2#3}}
+\DeclareCaptionFormat{figure*}{\marginnote{#1#2#3}}
 \RenewDocumentEnvironment{figure*}{O{\fps@figure}}
-	{\captionsetup{format=tufte2widefigure,
-		font=footnotesize,skip=0pt,justification=raggedright}
-	\@dblfloat{figure}[#1]fstar-pre}%
-	{fstar-post\end@dblfloat}%
-
+	{\@dblfloat{figure}[#1]
+	\begin{autoadjustwidth}{}{-\@tuftex@overhang}
+	\captionsetup{format=figure*,font=footnotesize,skip=0pt}
+	}
+	{\end{autoadjustwidth}\end@dblfloat}
+	
 % marginfigure
-\RenewDocumentEnvironment{marginfigure}{}
-{mf-pre}
-{mf-post}
+% keep definition from sidenotes / tuftex-sidenotes for now
 
 % table
+\DeclareCaptionFormat{table}{\marginnote{#1#2#3}} % HERE NEED TO SET THIS
+\RenewDocumentEnvironment{table}{O{\fps@table}}
+	{\@float{table}[#1]
+	\captionsetup{format=table,font=footnotesize,skip=0pt}
+	}
+	{\end@float}
+
 % table*
+\DeclareCaptionFormat{table*}{\marginnote{#1#2#3}}
+\RenewDocumentEnvironment{table*}{O{\fps@table}}
+	{\@dblfloat{table}[#1]
+	\begin{autoadjustwidth}{}{\@tuftex@overhang}
+	\captionsetup{format=table*,font=footnotesize,skip=0pt}
+	}
+	{\end{autoadjustwidth}\end@dblfloat}
+
 % margintable
+% keep definition from sidenotes / tuftex-sidenotes for now
