--- a/tuftex-handout.sty
+++ b/tuftex-handout.sty
@@ -12,12 +12,10 @@
 \RequirePackage{tuftex-letterpaper} % letter paper sizes, lengths, etc
 \RequirePackage{tuftex-fullwidth}   % fullwidth environment
 \RequirePackage{tuftex-sidenotes}   % thanks, footnote, sidenote, marginnote
+\RequirePackage{tuftex-cite}        % cite - citations with bibtex
 
 % testing
-\RequirePackage{tuftex-cite}        % cite - citations with bibtex
+\RequirePackage{tuftex-floats}      % figure, figure*, marginfigure, table etc
 
 % DISABLED/BAD
 %\RequirePackage{tuftex-letterspacing} % breaks tex4ebook!
-
-% TODO
-% float - floats like figure, table, figure*, table*, marginfigure
